[package]
name = "wren-sys"
version = "0.2.0"
authors = ["Jengamon <bob.hostern@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "wren"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wren_sys"
path = "lib.rs"

[build-dependencies]
cc = "1.0"
glob = "0.3"
bindgen = "0.54.0"

[dependencies]
libc = "0.2"